test/fail/forwardbody.min
program
    forward number x := 3
start
end
